# diamem

./: .tbdflow.yml  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
docs/: Project Sprecification.md  diamem-code-review.md  dsl-cheatsheet.md  examples.dsl
src/: app.rs  dsl.rs  lib.rs  main.rs  render.rs  theme.rs
src/parser/: diamem.pest  mod.rs
tests/: dsl_pipeline.rs  examples.rs  parser.rs  theme.rs
