[package]
name = "diamem"
version = "0.1.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
homepage = "https://cladam.github.io/"
repository = "https://github.com/cladam/diamem"
readme = "README.md"
license = "MIT"
description = "A desktop utility to 'live-code' visual diagrams using a custom DSL"
keywords = ["cli", "diagrams", "dsl", "screenshots"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"

[dependencies]
chrono = "0.4.44"
eframe = { version = "0.34.1", features = ["ron", "serde"] }
mermaid-rs-renderer = { version = "0.2.1", default-features = false, features = ["png"] }
pest = "2.8.6"
pest_derive = "2.8.6"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
usvg = "0.47.0"
